[develop]
script_dir=$base/lib/seem_ros
[install]
install_scripts=$base/lib/seem_ros

[options.entry_points]
console_scripts =
    seem_lifecycle_node = seem_ros.seem_lifecycle_node:main
    seem_web_browser_node = seem_ros.demo.seem.app:main
    seem_panoptic_service = seem_ros.seem_panoptic_service:main

[options.package_data]
* = *.yaml, *.pt, *.srv